tests/snapshots/scripts_sanitized/fmSyntaxColorizer/Example SyntaxColorizing - ID 46/All script steps - ID 9.txt.snap
---
source: src/main.rs
expression: output_content
---
# Control
AnwenderAbbruchZulassen setzen [ OFF ]
Lokale Benachrichtigung konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "187" ] ⚠️⚠️⚠️
Regionsmonitor-Script konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "185" ] ⚠️⚠️⚠️
# Else
# Else If
# End If
# End Loop
# Exit Loop If
Aktuelles Script verlassen []
Alle Scripts abbrechen
Wenn [ 1=0 ]
Sonst, wenn [ 1=1 ]
Sonst
Ende (wenn)
BeiTimer-Script installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "148" ] ⚠️⚠️⚠️
Schleife (Anfang)
	Verlasse Schleife wenn [ 1=1 ]
Schleife (Ende)
Scriptpause setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "62" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "All script steps" ]
Script auf Server ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "164" ] ⚠️⚠️⚠️
Fehleraufzeichnung setzen [ ON ]
Layoutobjekt-Animation festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "168" ] ⚠️⚠️⚠️
Variable setzen [ $Var ; 1+2 ]

# Navigation
Popover schließen
Blätternmodus aktivieren
Suchenmodus aktivieren [ Pause: ON ]
Seitenansichtsmodus aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "41" ] ⚠️⚠️⚠️
Gehe zu Feld []
Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
Gehe zu nächstem Feld
Gehe zu Objekt []
Gehe zu Ausschnittreihe [ Auswahl: ON ; Erste(r) ]
Gehe zu Ausschnittreihe [ Auswahl: ON ; Erste(r) ]
Gehe zu vorherigem Feld
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️

# Editing
Löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "49" ] ⚠️⚠️⚠️
Kopieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "47" ] ⚠️⚠️⚠️
Ausschneiden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "46" ] ⚠️⚠️⚠️
Einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "48" ] ⚠️⚠️⚠️
Suchen/Ersetzen ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "128" ] ⚠️⚠️⚠️
Alles auswählen
Auswahl festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "130" ] ⚠️⚠️⚠️
Rückgängig/Wiederholen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "45" ] ⚠️⚠️⚠️

# Fields
Exportiere alle Feldwerte ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "132" ] ⚠️⚠️⚠️
Audio/Video einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "159" ] ⚠️⚠️⚠️
Berechneten Wert einfügen [ Auswahl ]
Systemdatum einfügen [ Auswahl ]
Systemuhrzeit einfügen [ Auswahl ]
Benutzernamen einfügen [ Auswahl ]
Datei einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "131" ] ⚠️⚠️⚠️
PDF einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "158" ] ⚠️⚠️⚠️
Bild einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "56" ] ⚠️⚠️⚠️
Text einfügen [ Auswahl ]
Von Gerät einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "161" ] ⚠️⚠️⚠️
Aus Index einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "11" ] ⚠️⚠️⚠️
Aus zuletzt geöffnetem Satz einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "12" ] ⚠️⚠️⚠️
Referenzwerte holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "40" ] ⚠️⚠️⚠️
Ersetze alle Feldwerte [ Mit Dialog: ON ; Aktueller Inhalt ]
Feldwert setzen [ 🚨🚨🚨 BROKEN REFERENCE 🚨🚨🚨 ; "foo" ]
Feld nach Namen einstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "147" ] ⚠️⚠️⚠️
Nächste fortlaufende Nummer setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "116" ] ⚠️⚠️⚠️

Objekt einfügen (Windows OLE) ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "78" ] ⚠️⚠️⚠️
QuickTime einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "59" ] ⚠️⚠️⚠️

# Records
Schreibe Änderung Datens./Abfrage [ Mit Dialog: ON ]
Alle Datens./Abfragen kopieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "98" ] ⚠️⚠️⚠️
Datensatz/Abfrage kopieren
Alle Datensätze löschen [ Mit Dialog: ON ]
Ausschnittreihe löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "104" ] ⚠️⚠️⚠️
Datensatz/Abfrage löschen [ Mit Dialog: ON ]
Datensatz/Abfrage duplizieren
Datensätze exportieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "36" ] ⚠️⚠️⚠️
Datensätze importieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "35" ] ⚠️⚠️⚠️
Neuer Datensatz/Abfrage
Datensatz/Abfrage öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "133" ] ⚠️⚠️⚠️
Verwerfe Änderung Datens./Abfrage ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "51" ] ⚠️⚠️⚠️
Datensätze als Excel speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "143" ] ⚠️⚠️⚠️
Datensätze als PDF speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "144" ] ⚠️⚠️⚠️
Datensätze als Snapshot-Link speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "152" ] ⚠️⚠️⚠️
Tabelle leeren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "182" ] ⚠️⚠️⚠️

# Found Sets
Ergebnismenge einschränken
Ergebnismenge erweitern
Übereinst. Datensätze suchen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "155" ] ⚠️⚠️⚠️
Letzte Suche ändern
Mehrere ausschließen [ Mit Dialog: ON ]
Aktuellen Datens. ausschließen
Ergebnismenge suchen
Schnellsuche durchführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "150" ] ⚠️⚠️⚠️
Alle Datensätze anzeigen
Nur Ausgeschlossene anzeigen
Sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "39" ] ⚠️⚠️⚠️
Datensätze nach Feld sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "154" ] ⚠️⚠️⚠️
Sortierung aufheben

# Windows
Fenster anpassen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "31" ] ⚠️⚠️⚠️
Alle Fenster anordnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "120" ] ⚠️⚠️⚠️
Fenster schließen
Fenster fixieren
Fensterposition/-größe ändern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "119" ] ⚠️⚠️⚠️
Neues Fenster [ Style: Dokument ; Layout: <Originallayout> ]
Fenster aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "80" ] ⚠️⚠️⚠️
Fenster rollen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "81" ] ⚠️⚠️⚠️
Fenster aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "123" ] ⚠️⚠️⚠️
Fenstertitel setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "124" ] ⚠️⚠️⚠️
Zoomstufe setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "97" ] ⚠️⚠️⚠️
Menüleiste ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "166" ] ⚠️⚠️⚠️
Textlineal ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "92" ] ⚠️⚠️⚠️
Werkzeugleisten ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "29" ] ⚠️⚠️⚠️
Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️

Zulässige Ausrichtungen festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "176" ] ⚠️⚠️⚠️

# Files
Datei schließen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "34" ] ⚠️⚠️⚠️
Datei konvertieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "139" ] ⚠️⚠️⚠️
Neue Datei
Datei öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "33" ] ⚠️⚠️⚠️
Drucken ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "43" ] ⚠️⚠️⚠️
Drucker einrichten ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "42" ] ⚠️⚠️⚠️
Datei wiederherstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "95" ] ⚠️⚠️⚠️
Kopie speichern unter ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "37" ] ⚠️⚠️⚠️
Netzwerkzugriff einstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "84" ] ⚠️⚠️⚠️
SystemformateVerwenden setzen [ ON ]

# Accounts
Konto hinzufügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "134" ] ⚠️⚠️⚠️
Passwort ändern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "83" ] ⚠️⚠️⚠️
Konto löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "135" ] ⚠️⚠️⚠️
Konto aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "137" ] ⚠️⚠️⚠️
Erneut anmelden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "138" ] ⚠️⚠️⚠️
Kontopasswort zurücksetzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "136" ] ⚠️⚠️⚠️

# Spelling
Ganze Ergebnismenge prüfen
Aktuellen Datensatz prüfen
Nur Auswahl prüfen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "18" ] ⚠️⚠️⚠️
Wort korrigieren
Anwenderwörterbuch bearbeiten
Wörterbücher wählen
Dateioptionen - Rechtschreibung

# Open Menu Item
Gespeicherte Suchen bearbeiten
Dateioptionen
Suchen/Ersetzen
Hilfe
Hosts öffnen
Container verwalten
Datenquellen verwalten
Datenbank verwalten
Layouts verwalten
Designs verwalten
Wertelisten verwalten
Favoriten öffnen
Einstellungen
Scriptarbeitsbereich öffnen
Sharing - FileMaker Netzwerk
Auf Host hochladen

# Miscellaneous
# Comment
Formatierungsleiste zulassen [ OFF ]
AVPlayer - Wiedergabe ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "177" ] ⚠️⚠️⚠️
AVPlayer - Optionen festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "179" ] ⚠️⚠️⚠️
AVPlayer-Wiedergabestatus festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "178" ] ⚠️⚠️⚠️
Fehlerton
Telefonnummer wählen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "65" ] ⚠️⚠️⚠️
Touch-Tastatur aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "174" ] ⚠️⚠️⚠️
SQL ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "117" ] ⚠️⚠️⚠️
Programm beenden
Cache auf Platte ablegen
Ordnerpfad holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "181" ] ⚠️⚠️⚠️
Menüset installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "142" ] ⚠️⚠️⚠️
Plugin-Datei installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "157" ] ⚠️⚠️⚠️
URL öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "111" ] ⚠️⚠️⚠️
AppleScript ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "67" ] ⚠️⚠️⚠️
Objekt aktualisieren []
Ausschnitt aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "180" ] ⚠️⚠️⚠️
DDE Execute senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "64" ] ⚠️⚠️⚠️
Event senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "57" ] ⚠️⚠️⚠️
E-Mail senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "63" ] ⚠️⚠️⚠️
Web Viewer festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "146" ] ⚠️⚠️⚠️
Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
Sprechen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "66" ] ⚠️⚠️⚠️

JavaScript in Web Viewer ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "175" ] ⚠️⚠️⚠️
Zulässige Ausrichtungen festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "176" ] ⚠️⚠️⚠️

# #External Plugin Steps
# @var $command,$P1,$P2,$P3,$P4
MBS ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "186" ] ⚠️⚠️⚠️

# HIDDEN (Step 184)
Open Starter Solution ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "184" ] ⚠️⚠️⚠️
